主页增加是否有绑定邮箱的检查

--- a/EmpInfo/Views/Account/Login.cshtml
+++ b/EmpInfo/Views/Account/Login.cshtml
@@ -503,7 +503,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="text-warning"><i class="fa fa-warning"></i> 说明:从2016-10-20号开始实行密码复杂化，密码至少为6位，且必须包含英文字母、数字和特殊符号。如:abc123*! </p>
+                    <p class="text-warning"><i class="fa fa-warning"></i> 说明:从2016-10-20号开始实行密码复杂化，密码至少为6位，且必须包含英文字母、数字。如:abc123 </p>
 
                 </div>
                 <div class="modal-footer">
