--- a/EmpInfo/Views/Home/Index.cshtml
+++ b/EmpInfo/Views/Home/Index.cshtml
@@ -29,9 +29,16 @@
 
     $(function () {
 
+        //每次打开主页先看邮箱是否有绑定
+        $.post("@Url.Content("~/Home/ValidateEmail")", {}, function (data) {
+            if (!data.suc) {
+                toastr.error(data.msg);
+            }
+        });
+
         $('#resetPassModal').on('shown.bs.modal', function () {
-            $('#old_password').focus()
-        })
+            $('#old_password').focus();
+        });
         //修改密码
         $("#updateInfoBt").click(function () {
             var new_password = $("#new_password").val();
@@ -56,7 +63,6 @@
                     toastr.error(res.msg);
                 }
             });
-
         });
         //点击头像弹出密码修改框
         $("#people_img").click(function () {
@@ -127,6 +133,11 @@
             window.location.href = "@Url.Content("~/Chart/ChartIndex")";
         });
 
+        //快递收取
+        $("#packageBt,#packageImg").click(function () {
+            window.location.href = "@Url.Content("~/Package/EmpView")";
+        });
+
         //会所点餐
         $("#ResImg,#ResBt").click(function () {
             $.post("@Url.Content("~/Home/ValidatePhone")", {}, function (data) {
@@ -187,7 +198,7 @@
             <div class="caption">
                 <h3>宿舍快件寄存</h3>
                 <p>可以预约登记派送到信利宿舍区的快件，并查询历史记录</p>
-                <p><button class="btn btn-primary btn-block" id="packageBt">进入查询</button></p>
+                <p><button class="btn btn-primary btn-block" id="packageBt">进入登记</button></p>
             </div>
         </div>
     </div>
