增加推送有关页面

--- a/EmpInfo/Views/Home/CheckDinningCard.cshtml
+++ b/EmpInfo/Views/Home/CheckDinningCard.cshtml
@@ -313,7 +313,11 @@
     }
 <div class="panel panel-success">
     <div class="panel-heading">
-        <h3 class="panel-title"><span class="glyphicon glyphicon-th-list"></span> 当前饭卡信息</h3>
+        <ol class="breadcrumb" style="margin:0;padding:0; background-color:transparent;">
+            <li><span class="glyphicon glyphicon-hand-right"></span></li>
+            <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
+            <li class="active">当前饭卡信息</li>
+        </ol>        
     </div>
     <div class="panel-body">
         <div class="row">
