--- a/EmpInfo/Views/Home/CheckDormitory.cshtml
+++ b/EmpInfo/Views/Home/CheckDormitory.cshtml
@@ -40,7 +40,11 @@
 
 <div class="panel panel-success">
     <div class="panel-heading">
-        <h3 class="panel-title"><span class="glyphicon glyphicon-home"></span> 当前住宿状态</h3>
+        <ol class="breadcrumb" style="margin:0;padding:0; background-color:transparent;">
+            <li><span class="glyphicon glyphicon-hand-right"></span></li>
+            <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
+            <li class="active">当前住宿状态</li>
+        </ol>          
     </div>
     <div class="panel-body">
         <div class="row">
