--- a/EmpInfo/Views/Home/Index.cshtml
+++ b/EmpInfo/Views/Home/Index.cshtml
@@ -130,7 +130,19 @@
 
         //工资查询入口
         $("#SalaryImg,#SalaryBt").click(function () {
-            window.location.href = "@Url.Content("~/Home/CheckSalary")";
+            $.post("@Url.Content("~/Home/ValidateEmail")", {}, function (data) {
+                if (!data.suc) {
+                    toastr.error(data.msg);
+                } else {
+                    $.post("@Url.Content("~/Home/ValidatePhone")", {}, function (data) {
+                        if (data.suc) {
+                            window.location.href = "@Url.Content("~/Home/CheckSalary")";
+                        } else {
+                            toastr.error(data.msg);
+                        }
+                    });
+                }
+            });           
         });
 
         //图形报表
@@ -139,12 +151,12 @@
         });
 
         //快递收取
-        $("#packageBt,#packageImg").click(function () {
+        @*$("#packageBt,#packageImg").click(function () {
             window.location.href = "@Url.Content("~/Package/EmpView")";
-        });
+        });*@
 
         //会所点餐
-        $("#ResImg,#ResBt").click(function () {
+        @*$("#ResImg,#ResBt").click(function () {
             $.post("@Url.Content("~/Home/ValidatePhone")", {}, function (data) {
                 if (data.suc) {
                     //2016-10-05 如果有部长点餐权限，即跳过选择直接进入会所
@@ -158,6 +170,10 @@
                     toastr.error(data.msg);
                 }
             });
+        });*@
+
+        $("#codeBt").click(function () {
+            $("#codeModal").modal("show");
         });
 
     });
@@ -170,16 +186,38 @@
 
     <div class="center-block" style="margin-top:5px;">
         <h5 class="text-center" style="color:white">@ViewData["username"]</h5>
-        <button class="btn btn-success btn-block btn-xs center-block"  style="width:80px;" id="logoutBt">安全退出</button>
+        <div class="row">
+            <div class="col-xs-4">
+
+            </div>
+            <div class="col-xs-4">
+                <button class="btn btn-success btn-block btn-sm center-block"  style="width:100px;" id="logoutBt"><i class="fa fa-sign-out"></i> 安全退出</button>
+            </div>
+            <div class="col-xs-4">
+                <button class="btn btn-primary btn-block btn-sm center-block"  style="width:100px;" id="codeBt"><i class="fa fa-barcode"></i> 饭卡付款码</button>
+            </div>
+        </div>
+        
     </div>
+    
 </div>
 
 <div class="row">
     <div class="col-xs-6 col-sm-4">
         <div class="thumbnail">
+            <a href="#" id="SalaryImg"><img src="@Url.Content("~/Content/images/salary.png")" alt="salary"></a>
+            <div class="caption">
+                <h3>个人工资查询</h3>
+                <p>可以查询本人的工资概况和最近半年内的发放明细记录</p>
+                <p><button class="btn btn-primary btn-block" id="SalaryBt">进入查询</button></p>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-6 col-sm-4">
+        <div class="thumbnail">
             <a href="#" id="mealImg"><img src="@Url.Content("~/Content/images/meal.png")" alt="meal"></a>
             <div class="caption">
-                <h3>饭卡余额及消费查询</h3>
+                <h3>饭卡消费查询</h3>
                 <p>可以查询本人的饭卡余额和最近的充值、消费历史记录</p>
                 <p><button class="btn btn-primary btn-block" id="diningCardBt">进入查询</button></p>
             </div>
@@ -187,11 +225,41 @@
     </div>
     <div class="col-xs-6 col-sm-4">
         <div class="thumbnail">
-            <a href="#" id="SalaryImg"><img src="@Url.Content("~/Content/images/salary.png")" alt="salary"></a>
+            <a href="#" id="ResImg"><img src="@Url.Content("~/Content/images/res_256.png")" alt="res" ></a>
             <div class="caption">
-                <h3>工资明细查询</h3>
-                <p>可以查询本人的工资概况和最近一年内的发放明细记录</p>
-                <p><button class="btn btn-danger btn-block" id="SalaryBt">进入查询</button></p>
+                <h3>会所订餐服务</h3>
+                <p>可以在会所进行订餐，并查询自己的订餐记录</p>
+                <p><button class="btn btn-primary btn-block disabled" id="ResBt">进入系统(待开放)</button></p>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-6 col-sm-4">
+        <div class="thumbnail">
+            <a href="#" id="packageImg"><img src="@Url.Content("~/Content/images/repair.png")" alt="repair"></a>
+            <div class="caption">
+                <h3>宿舍维修申请</h3>
+                <p>可以预约宿舍维修服务，查询维修费用与历史记录</p>
+                <p><button class="btn btn-primary btn-block disabled" id="packageBt">进入预约(待开放)</button></p>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-6 col-sm-4">
+        <div class="thumbnail">
+            <a href="#" id="packageImg"><img src="@Url.Content("~/Content/images/book.png")" alt="repair"></a>
+            <div class="caption">
+                <h3>宿舍来访预约</h3>
+                <p>可以对进入宿舍的外来人员进行来访预约</p>
+                <p><button class="btn btn-primary btn-block disabled" id="packageBt">进入预约(待开放)</button></p>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-6 col-sm-4">
+        <div class="thumbnail">
+            <a href="#" id="packageImg"><img src="@Url.Content("~/Content/images/post.png")" alt="package"></a>
+            <div class="caption">
+                <h3>宿舍快件寄存</h3>
+                <p>可以预约登记派送到信利宿舍区的快件</p>
+                <p><button class="btn btn-primary btn-block disabled" id="packageBt">进入登记(待开放)</button></p>
             </div>
         </div>
     </div>
@@ -201,22 +269,12 @@
                 <img src="@Url.Content("~/Content/images/dormitory_128.png")" alt="dormitory">
             </a>
             <div class="caption">
-                <h3>住宿状态及费用查询</h3>
-                <p>可以查询本人最近半年内的房租、水电费、扣费等记录</p>
+                <h3>住宿费用查询</h3>
+                <p>可以查询本人最近半年内的房租明细</p>
                 <p><button class="btn btn-primary btn-block" id="dormitoryBt">进入查询</button></p>
             </div>
         </div>
     </div>
-    @*<div class="col-xs-6 col-sm-4">
-        <div class="thumbnail">
-            <a href="#" id="packageImg"><img src="@Url.Content("~/Content/images/post.png")" alt="package"></a>
-            <div class="caption">
-                <h3>宿舍快件寄存</h3>
-                <p>可以预约登记派送到信利宿舍区的快件，并查询历史记录</p>
-                <p><button class="btn btn-primary btn-block" id="packageBt">进入登记</button></p>
-            </div>
-        </div>
-    </div>*@
     @if (auts.IndexOf("AdminIndex") >= 0)
     {
     <div class="col-xs-6 col-sm-4">
@@ -242,16 +300,7 @@
             </div>
         </div>
     }
-    <div class="col-xs-6 col-sm-4">
-        <div class="thumbnail">
-            <a href="#" id="ResImg"><img src="@Url.Content("~/Content/images/res_256.png")" alt="res" ></a>
-            <div class="caption">
-                <h3>会所订餐系统</h3>
-                <p>可以在会所进行订餐，并查询自己的订餐记录</p>
-                <p><button class="btn btn-primary btn-block" id="ResBt">进入系统(测试中...)</button></p>
-            </div>
-        </div>
-    </div>
+    
 </div>
 
 @Html.Partial("_ResSelDialog")
@@ -304,6 +353,20 @@
                 <div class="modal-footer" id="personalInfoBts">
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
                     <button id="updateInfoBt" type="button" class="btn btn-success">确认修改</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="codeModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="codeModelLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div style="margin-bottom:12px;text-align:right;"><i class="fa fa-close" data-dismiss="modal" style="cursor:pointer;color:gray;"></i></div>                    
+                    <div class="clearfix">
+                        <img src="@Url.Content("~/Home/GetCode39")" class="center-block" alt="code39" />
+                        <img src="@Url.Content("~/Home/GetQrCode")" class="center-block" alt="qrCode" />
+                    </div>
                 </div>
             </div>
         </div>
