--- a/EmpInfo/Views/Shared/_Layout.cshtml
+++ b/EmpInfo/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="@Url.Content("~/Content/toastr.min.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/skins/square/red.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/skins/square/blue.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/skins/square/green.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/fontawesome/fontcss/font-awesome.min.css")" />
 
     @RenderSection("CSS", false)
