可查询最近两个月的饭卡消费记录

--- a/EmpInfo/Views/Apply/DormRepairIndex.cshtml
+++ b/EmpInfo/Views/Apply/DormRepairIndex.cshtml
@@ -214,14 +214,14 @@
                 3. 对本次服务不确认评价，将不能再次申请维修，请配合给予评价。
             </p>
             <p>
-                4. 详细操作指引，<a href="@Url.Content("~/Content/doc/宿舍维修申请流程操作指引.pdf")" target="_blank">点此下载</a> 。
+                4. 详细操作指引，<a href="@Url.Content("~/Content/doc/宿舍维修申请流程操作指引.pdf")" target="_blank">点此查看下载</a> 。
             </p>
         </div>
     </div>
 </div>
 
 @section Modal {
-    <div class="modal fade" id="dpApplyModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="resetPasswordLabel" aria-hidden="true">
+    <div class="modal fade" id="dpApplyModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="dpApplyLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
